# Lidar-Ground-Segmentation

./: CMakeLists.txt  README.md
include/: lidar_ground_segmenter.hpp
src/: lidar_ground_segmenter.cpp
